

                      ForkLabs JavaXPCOM, Build 2011XXXX
                                Release Notes


INTRODUCTION

    This library is contains the basic skeleton to make a web crawler using
    the mozilla browser inside a SWT shell. The crawler can control the
    navigation and has access to the underlying DOM rendered by the browser.


USAGE

    The crawler is expected to be subclassed to include the control and
    data mining mechanisms. There is a console example class in src/test/java
    that fires up a browser, navigates to the project page and explores the
    main tabs (Project Home, Downloads, Wiki, ...).


LIMITATIONS

    The distribution includes a version of SWT and XULRunner for Windows. If
    you are to use this library on another operating system, you will have to
    install your own version of SWT and XULRunner and re-link the dependency
    in the POM.

    * http://www.eclipse.org/swt/
    * http://releases.mozilla.org/pub/mozilla.org/xulrunner/releases/


NEW FEATURES IN VERSION 2011XXXX

   o The Javadoc now links with the forklabs-baselib API.
   o New shortcut methods in XPCOMConverter to access attributes of a node.
   o The crawler now accepts URL objects for navigation.
   o The selector now works with class Filters to creates its filters.
   o Many new filters


VERSION 20111011

   o A new selector API has been added to select nodes in a document
     much more easily.
   o A new dependency has been added, forklabs-baselib
     (http://code.google.com/p/forklabs-baselib/)


VERSION 20110523

   o Corrected the demo to match the changes on Google Code
   o Added the Ladyr's XULRunner with Java: JavaXPCOM Tutorial
   

VERSION 20101007

   o Added two methods to control the enclosing shell, minimizeBrowser and
     restoreBrowser
   o Added a method to extract the "inner text" from a node in the
     XPCOMConverter, deprecated the same method in class Crawler